--- a/UI_Files/interviews_ui.ui
+++ b/UI_Files/interviews_ui.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>750</width>
+    <width>902</width>
     <height>590</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>750</width>
+    <width>902</width>
     <height>590</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>750</width>
+    <width>902</width>
     <height>590</height>
    </size>
   </property>
@@ -57,7 +57,7 @@
   <widget class="QLabel" name="labelLogo">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>290</x>
      <y>12</y>
      <width>261</width>
      <height>101</height>
@@ -76,7 +76,7 @@
   <widget class="QLabel" name="labelInterviews">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>550</x>
      <y>40</y>
      <width>251</width>
      <height>41</height>
@@ -239,7 +239,7 @@ QLineEdit:hover {
     <rect>
      <x>210</x>
      <y>200</y>
-     <width>511</width>
+     <width>681</width>
      <height>361</height>
     </rect>
    </property>
@@ -249,6 +249,11 @@ QLineEdit:hover {
    <attribute name="horizontalHeaderDefaultSectionSize">
     <number>170</number>
    </attribute>
+   <column>
+    <property name="text">
+     <string>Period</string>
+    </property>
+   </column>
    <column>
     <property name="text">
      <string>Name Surname</string>
@@ -303,7 +308,7 @@ QPushButton:hover{
   <widget class="QLabel" name="labelMenu">
    <property name="geometry">
     <rect>
-     <x>420</x>
+     <x>500</x>
      <y>90</y>
      <width>121</width>
      <height>41</height>
