--- a/UI_Files/applications_ui.ui
+++ b/UI_Files/applications_ui.ui
@@ -141,36 +141,6 @@ QPushButton:hover{
     <string>Unscheduled Meetings</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButtonDuplicateRegistrations">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>360</y>
-     <width>171</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial</family>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton{
-	border-radius : 15px;
-	background-color : rgb(25, 200, 200);
-	color: rgb(255, 255, 255);
-}
-QPushButton:hover{
-	background-color: rgb(20, 135, 135);
- border: 2px solid rgb(162, 0, 0);
-}</string>
-   </property>
-   <property name="text">
-    <string>Duplicate Registrations</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButtonDifferentialRegistrations">
    <property name="geometry">
     <rect>
@@ -511,6 +481,28 @@ color: rgb(255, 255, 255);
 </string>
    </property>
   </widget>
+  <widget class="QComboBox" name="comboBoxDuplicatedApplications">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>360</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QComboBox{
+	border-radius : 15px;
+	background-color : rgb(25, 200, 200);
+	color: rgb(255, 255, 255);
+}
+QComboBox:hover{
+	border-radius : 15px;
+	background-color: rgb(20, 135, 135);
+    border: 2px solid rgb(162, 0, 0);
+}</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>lineEditSearch</tabstop>
@@ -518,7 +510,6 @@ color: rgb(255, 255, 255);
   <tabstop>pushButtonAllApplications</tabstop>
   <tabstop>pushButtonPlannedMeetings</tabstop>
   <tabstop>pushButtonUnscheduledMeeting</tabstop>
-  <tabstop>pushButtonDuplicateRegistrations</tabstop>
   <tabstop>pushButtonDifferentialRegistrations</tabstop>
   <tabstop>pushButtonFilterApplications</tabstop>
   <tabstop>tableWidget</tabstop>
