--- a/UI_Files/interviews_ui.ui
+++ b/UI_Files/interviews_ui.ui
@@ -101,7 +101,7 @@ color: rgb(71, 84, 88);</string>
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>530</y>
+     <y>490</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -131,7 +131,7 @@ QPushButton:hover{
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>460</y>
+     <y>420</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -161,7 +161,7 @@ QPushButton:hover{
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>320</y>
+     <y>280</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -187,14 +187,14 @@ QPushButton:hover{
     <string>Submitted Projects</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEditUsername">
+  <widget class="QLineEdit" name="lineEditSearch">
    <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>200</y>
+     <y>210</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -275,36 +275,6 @@ Arrival Date</string>
     </property>
    </column>
   </widget>
-  <widget class="QPushButton" name="pushButtonSearch">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>250</y>
-     <width>171</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial</family>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton{
-	border-radius : 15px;
-	background-color : rgb(25, 200, 200);
-	color: rgb(255, 255, 255);
-}
-QPushButton:hover{
-	background-color: rgb(20, 135, 135);
- border: 2px solid rgb(162, 0, 0);
-}</string>
-   </property>
-   <property name="text">
-    <string>Search</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="labelMenu">
    <property name="geometry">
     <rect>
@@ -333,7 +303,7 @@ color: rgb(71, 84, 88);</string>
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>390</y>
+     <y>350</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -361,8 +331,7 @@ QPushButton:hover{
   </widget>
  </widget>
  <tabstops>
-  <tabstop>lineEditUsername</tabstop>
-  <tabstop>pushButtonSearch</tabstop>
+  <tabstop>lineEditSearch</tabstop>
   <tabstop>pushButtonSubmittedProjects</tabstop>
   <tabstop>pushButtonProjectArrivals</tabstop>
   <tabstop>tableWidget</tabstop>
